--- a/webapp/view/CriarMaterialRodante.view.xml
+++ b/webapp/view/CriarMaterialRodante.view.xml
@@ -1116,7 +1116,7 @@
 						<f:FormElement label="Tensionamento (Flecha - A)">
 							<f:fields>
 								<Input 
-								id="passo_5"
+								id="tensionamento_5"
 								value="{CriarMaterialRodanteModel>Horimetro}"
 								description=""
 								type="Number"
@@ -1132,9 +1132,73 @@
 				<f:FormContainer title="Lado Direito">
 					<f:formElements>						
 						<f:FormElement label="Flecha (A)" visible="{CriarMaterialRodanteModel>ExibirMaterial}">
+							<f:fields>								
+								<Input 
+								id="flecha2"
+								value="{CriarMaterialRodanteModel>Horimetro}"
+								description=""
+								type="Number"
+								enabled="true"
+								required="false"
+								showClearIcon="true"
+								change="onValidarHorimetro"									
+								/>
+							</f:fields>
+						</f:FormElement>					
+					</f:formElements>
+				</f:FormContainer>	
+			</f:formContainers>
+		</f:Form>
+		<f:Form id="CondicaoOperacao"
+		editable="true">
+			<f:title>
+				<core:Title text="Condição de Operação" />
+			</f:title>
+			<f:FormContainer>
+					<f:formElements>
+						<f:FormElement>
+							<f:fields>
+								<CheckBox text="BAIXA" selected="true" />
+								<CheckBox text="MODERADA" selected="false" />
+								<CheckBox text="ALTA" selected="false" />
+							</f:fields>
+						</f:FormElement>
+					</f:formElements>
+			</f:FormContainer>		
+			<f:FormContainer>
+					<f:formElements>
+						<f:FormElement>
+							<f:fields>
+								<CheckBox text="BAIXO" selected="true" />
+								<CheckBox text="MODERADO" selected="false" />
+								<CheckBox text="ALTO" selected="false" />
+							</f:fields>
+						</f:FormElement>
+					</f:formElements>
+			</f:FormContainer>	
+			<f:layout>
+				<f:ResponsiveGridLayout
+					labelSpanXL="4"
+					labelSpanL="4"
+					labelSpanM="12"
+					labelSpanS="12"
+					adjustLabelSpan="false"
+					emptySpanXL="0"
+					emptySpanL="0"
+					emptySpanM="0"
+					emptySpanS="0"
+					columnsXL="2"
+					columnsL="2"
+					columnsM="2"
+					singleContainerFullSize="false" />
+			</f:layout>
+			<f:formContainers>
+				<f:FormContainer title="">
+					<f:formElements>						
+						<f:FormElement label="Flecha (A)" visible="{CriarMaterialRodanteModel>ExibirMaterial}">
 							<f:fields>
 								<Input 
-								id="passo"
+								id="flecha"
 								value="{CriarMaterialRodanteModel>Horimetro}"
 								description=""
 								type="Number"
