--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -56,7 +56,17 @@
 						</subSections>
 					</ObjectPageSection>
 
-					<ObjectPageSection titleUppercase="false" title="Section 3">
+					<ObjectPageSection titleUppercase="false" title="Roletes">
+						<subSections>
+							<ObjectPageSubSection titleUppercase="false">
+								<blocks>
+									<blockcolor:Roletes id="roletes"/>
+								</blocks>
+							</ObjectPageSubSection>
+						</subSections>
+					</ObjectPageSection>
+
+										<ObjectPageSection titleUppercase="false" title="Section 3">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
 								<blocks>
