--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -56,6 +56,16 @@
 						</subSections>
 					</ObjectPageSection>
 
+					<ObjectPageSection titleUppercase="false" title="Condição de Operação">
+						<subSections>
+							<ObjectPageSubSection titleUppercase="false">
+								<blocks>
+									<blockcolor:CondicaoOperacao id="condicaooperacao"/>
+								</blocks>
+							</ObjectPageSubSection>
+						</subSections>
+					</ObjectPageSection>
+
 					<ObjectPageSection titleUppercase="false" title="Roletes">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
@@ -66,11 +76,11 @@
 						</subSections>
 					</ObjectPageSection>
 
-										<ObjectPageSection titleUppercase="false" title="Section 3">
+					<ObjectPageSection titleUppercase="false" title="Inspeção">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
 								<blocks>
-									<blockcolor:BlockBlueT3 id="bbt3"/>
+									<blockcolor:Inspecao id="inspecao"/>
 								</blocks>
 							</ObjectPageSubSection>
 						</subSections>
