--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -56,31 +56,11 @@
 						</subSections>
 					</ObjectPageSection>
 
-					<ObjectPageSection titleUppercase="false" title="Condição de Operação">
+					<ObjectPageSection titleUppercase="false" title="Section 3">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
 								<blocks>
-									<blockcolor:CondicaoOperacao id="condicaooperacao"/>
-								</blocks>
-							</ObjectPageSubSection>
-						</subSections>
-					</ObjectPageSection>
-
-					<ObjectPageSection titleUppercase="false" title="Roletes">
-						<subSections>
-							<ObjectPageSubSection titleUppercase="false">
-								<blocks>
-									<blockcolor:Roletes id="roletes"/>
-								</blocks>
-							</ObjectPageSubSection>
-						</subSections>
-					</ObjectPageSection>
-
-					<ObjectPageSection titleUppercase="false" title="Inspeção">
-						<subSections>
-							<ObjectPageSubSection titleUppercase="false">
-								<blocks>
-									<blockcolor:Inspecao id="inspecao"/>
+									<blockcolor:BlockBlueT3 id="bbt3"/>
 								</blocks>
 							</ObjectPageSubSection>
 						</subSections>
