--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -106,13 +106,22 @@
 						</subSections>
 					</ObjectPageSection>
 
-			
-
 					<ObjectPageSection titleUppercase="false" title="Inspeção">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
 								<blocks>
 									<blockcolor:Inspecao id="inspecao"/>
+								</blocks>
+							</ObjectPageSubSection>
+						</subSections>
+					</ObjectPageSection>
+
+
+					<ObjectPageSection titleUppercase="false" title="Observações">
+						<subSections>
+							<ObjectPageSubSection titleUppercase="false">
+								<blocks>
+									<blockcolor:Observacoes id="observacao"/>
 								</blocks>
 							</ObjectPageSubSection>
 						</subSections>
