--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -86,7 +86,7 @@
 						</subSections>
 					</ObjectPageSection>
 
-					<ObjectPageSection titleUppercase="false" title="Condição de Operação">
+					<ObjectPageSection titleUppercase="false" title="Condição Operação">
 						<subSections>
 							<ObjectPageSubSection titleUppercase="false">
 								<blocks>
