--- a/webapp/view/ObjectPageSection.view.xml
+++ b/webapp/view/ObjectPageSection.view.xml
@@ -32,7 +32,7 @@
 				</headerTitle>
 
 				<headerContent>
-					<m:ObjectAttribute title="Inpeção e Medição de Material Rodante" text=""/>
+					<m:ObjectAttribute title="Inpeção e Medição de Material Rodante" text="Formulário 321"/>
 				</headerContent>
 
 				<sections>
